# Learning-Factored-Representation-via-SSL

./: .gitignore  README.md  agent_snapshots.csv  main.py  pyproject.toml  requirements.txt  requirements_ch.txt  script_gen_data.py  setup.cfg  train.py
configs/data_generator/: config.yaml  config_test.yaml
configs/eval/: config.yaml
configs/models/: config.yaml
configs/ssl_configs/ssl_methods/: barlow_cifar10.yaml  barlow_cifar10_multigpu.yaml  barlow_rl.yaml  barlow_rl_eval.yaml  barlow_rl_natureCNN.yaml  covariance_factor.yaml  covariance_factor_resnet50.yaml  mask_factor.yaml  simclr_cifar10_lars.yaml  simclr_cifar10c_lars.yaml  supervised_rl.yaml
configs/ssl_configs/user/general/: logging.yaml  (+4 more)
data/: README.md  check_env.py  data_augmentor.py  data_generator.py  data_saver.py  dataset.py  evaluation_dataset.py  load_factored_model.py  train_data
data/ssl_dataset/: __init__.py  base.py
data/utils/: controlled_reset.py
disentanglement_metrics/: disentangelement_callback.py  frob_norm_diff_identity.py  mutual_info.py  training_dynamics.py  z_min_var.py
models/learning_head/: self_supervised_head.py  supervised_head.py
models/policy_head/: custom_callbacks.py  detached_actor_critic.py  eval_callback.py  policy_head.py  vec_video_recorder.py
models/policy_head/utils/: flatten_mlp.py  impala_cnn.py
models/ssl_models/: create_nn.py  custom_barlow_twins.py  custom_base.py  custom_config.py  custom_supervised.py  factored_models.py  stable_ssl_patches.py  train.py
models/utils/: flatten_mlp.py  impala_cnn.py  nature_cnn.py
slurm_scripts/: train.bash
src/: gym.py  replay_buffer.py  train.py
src/ssl_dataset/: base.py
ssl_setup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+16 files in other folders)
