[project]
name = "ssl-setup"
description = "SSL setup for the project"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "torch",
    "torchvision",
    "tqdm",
    "omegaconf",
    "wandb",
    "hydra-core",
    "hydra-submitit-launcher",
    "stable-ssl @ git+https://github.com/rbalestr-lab/stable-SSL/tree/a13ff7c0b7448895698a8a22198b9be1bbb36aa2"
]
dynamic = ["version"]