[metadata]
name = ssl-setup
version = 0.0.1
description = SSL setup for the project
[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    seaborn
    torch
    torchvision
    tqdm
    omegaconf
    wandb
    hydra-core
    hydra-submitit-launcher
    stable-ssl @ git+https://github.com/rbalestr-lab/stable-SSL.git@main#egg=stable-ssl
