[metadata]
name = ssl-setup
version = 0.0.1
description = SSL setup for the project
[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    seaborn
    torch
    torchvision
    tqdm
    omegaconf
    wandb
    hydra-core
    hydra-submitit-launcher
    stable-ssl @ git+https://github.com/rbalestr-lab/stable-SSL/tree/a13ff7c0b7448895698a8a22198b9be1bbb36aa2
